panel almost done

--- a/panel.html
+++ b/panel.html
@@ -1,46 +1,79 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-<!-- Links til font Raleway til tekst og Source Sans Pro til tal -->
-    <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900,900i&display=swap" rel="stylesheet">
-<!-- Link til burgermenu -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<!-- Link til eksterne sider, Css og JavaScript -->
-    <link rel="stylesheet" href="robotnordic.css">
-    <script src="index.js" defer></script>
-    <title>Robot Nordic</title>
-  </head>
+
+<head>
+  <meta charset="utf-8">
+  <!-- Links til font Raleway til tekst og Source Sans Pro til tal -->
+  <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900,900i&display=swap" rel="stylesheet">
+  <!-- Link til burgermenu -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!-- Link til eksterne sider, Css og JavaScript -->
+  <link rel="stylesheet" href="robotnordic.css">
+  <script src="index.js" defer></script>
+  <title>Robot Nordic</title>
+</head>
+
 <body>
 
-<!-- Kørende baggrund. Her er der kun id til JS og højden på billedet -->
-<div id="canvas_container">
+  <!-- Kørende baggrund. Her er der kun id til JS og højden på billedet -->
+  <div id="canvas_container">
     <canvas id="my_canvas" height="812"></canvas>
-</div>
+  </div>
 
-<!-- Hele menubaren -->
-<div class="wrapper">
+  <!-- Hele menubaren -->
+  <div class="wrapper">
 
-<!-- Menubarens indhold, alt hvad der er inde i "wrapper"-->
-<div class="sidebar">
-  <a href="forside.html"><img src="img/logo-uden-tekst.png" alt="Robot nordics logo" width="50"></a>
-  <a href="index.html" style="position: absolute; margin-left: 170px; top: 74px;"><img title="Log ud" class="log-out" src="img/log-out.png" alt="En pil der peger væk fra en dør"></a>
-  <img class="dansk" src="img/dansk.jpg" alt="vælg sproget dansk" width="33">
-  <img class="engelsk" src="img/engelsk.png" alt="vælg sproget engelsk" width="35">
+    <!-- Menubarens indhold, alt hvad der er inde i "wrapper"-->
+    <div class="sidebar">
+      <a href="forside.html"><img src="img/logo-uden-tekst.png" alt="Robot nordics logo" width="50"></a>
+      <a href="index.html" style="position: absolute; margin-left: 170px; top: 74px;"><img title="Log ud" class="log-out" src="img/log-out.png" alt="En pil der peger væk fra en dør"></a>
+      <img class="dansk" src="img/dansk.jpg" alt="vælg sproget dansk" width="33">
+      <img class="engelsk" src="img/engelsk.png" alt="vælg sproget engelsk" width="35">
 
-<!-- Burgermenuens indhold -->
-    <div id="myLinks">
+      <!-- Burgermenuens indhold -->
+      <div id="myLinks">
         <a href="forside.html">Forside</a>
         <a href="template.html">Create template</a>
         <a href="panel.html">Control panel</a>
-    </div>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+      </div>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
-        </a>
+      </a>
     </div>
-</div>
+  </div>
 
+  <h1 class="h1-text">Oversigt</h1>
+  <hr class="top-line">
+  <div class="panel-text">
+    <div class="pallenavn">Pallenavn:</div>
+    <div class="palletype">Palletype:</div>
+    <div class="fyldnings">Fyldningshøjde:</div>
+    <div class="procent">Fyldninsprocent:</div>
+    <div class="tilladt">Tilladt udhæng:</div>
+  </div>
+  <div class="panel-test">
+    <div class="pl-test">Test</div>
+    <div class="pl-test">Test</div>
+    <div class="fyldnings-test">Test</div>
+    <div class="procent-test">Test</div>
+    <div class="tilladt-test">Test</div>
+  </div>
+
+  <h2 class="visning">Visning af pallen</h2>
+  <hr class="midt-line">
+  <div class="se-palle"><a href="#">Se Palle</a></div>
+
+<h2 class="kontrol">Kontrol Panel</h2>
+<hr class="bottom-line">
+<div class="flex-knapper-pl">
+<div class="print"><a href="#">Print Label</a></div>
+<div class="gem"><a href="#">Gem Skabelon</a></div>
+<div class="plan"><a href="#">Tilføj til planlægning</a></div>
+<div class="pak"><a href="#" style="
+    color: #ffffff;">Begynd Pakning</a></div>
+</div>
 </body>
+
 </html>
