--- a/template.html
+++ b/template.html
@@ -78,13 +78,14 @@
 <div class="panel">
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 <!-- infoknap-->
-  <button id="myBtn" img src="img/infoknap.png"></button>
+  <button id="myBtn"></button>
   <div id="myModal" class="modal">
 
-    <!-- Modal content -->
-    <div class="modal-content">
+    <!-- popup content -->
+    <div class="infoknap-content">
       <span class="close">&times;</span>
       <p>Navngiv den palle du vil have maskinen til at pakke.</p>
+      <img class="infografi" src="img/infoknap.png">
     </div>
 
   </div>
