--- a/template.html
+++ b/template.html
@@ -76,8 +76,37 @@
 
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p><br>
 
+      <!-- infoknap-->
+        <button id="myBtn"></button>
+        <div id="myModal" class="modal">
+
+          <!-- popup content -->
+            <div class="infoknap-content">
+              <span class="close">&times;</span>
+              <p>Navngiv den palle du vil have maskinen til at pakke.</p>
+              <img class="infografi" src="img/infoknap.png">
+            </div>
+
+          </div>
+
+
       <label for="fname">Palle Navn:</label><br>
       <input type="text" id="fname" name="fname" value="Fx. Shampoo"><br><br>
+
+      <!-- infoknap-->
+        <button id="myBtn"></button>
+        <div id="myModal" class="modal">
+
+          <!-- popup content -->
+            <div class="infoknap-content">
+              <span class="close">&times;</span>
+              <p>Navngiv den palle du vil have maskinen til at pakke.</p>
+              <img class="infografi" src="img/infoknap.png">
+            </div>
+
+          </div>
+
+
       <label for="fname">Palle Type:</label><br>
       <input type="text" id="fname" name="fname" value="Fx. Europalle"><br><br>
 
