--- a/forside.html
+++ b/forside.html
@@ -37,7 +37,7 @@
         <a href="template.html">Create template</a>
         <a href="panel.html">Control panel</a>
       </div>
-      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+      <a href="javascript:void(0);" class="icon" onclick="myfunction(menubar)">
         <i class="fa fa-bars"></i>
       </a>
     </div>
