panel med tilbage ikon done

--- a/panel.html
+++ b/panel.html
@@ -43,6 +43,9 @@
       </a>
     </div>
   </div>
+<div class="back-pil">
+  <a href="forside.html"><img title="Gå tilbage til forsiden" src="img/back-pil.png" alt="En tilbage vej til forsiden"></a>
+</div>
 
   <h1 class="h1-text">Oversigt</h1>
   <hr class="top-line">
