--- a/forside.html
+++ b/forside.html
@@ -11,6 +11,7 @@
   <!-- Link til eksterne sider, Css og JavaScript -->
   <link rel="stylesheet" href="robotnordic.css">
   <script src="index.js" defer></script>
+  <script src="silder.js" defer></script>
   <title>Robot Nordic</title>
 </head>
 
@@ -43,8 +44,41 @@
     </div>
   </div>
 
-  <!-- Knapper til undersider -->
   <main>
+<!-- slideshow med instruktion -->
+    <div class="slideshow-container">
+
+    <div class="mySlides fade">
+      <div class="numbertext">1 / 3</div>
+      <img src="img/engelsk.png" style="width:100%">
+      <div class="text">Caption Text</div>
+    </div>
+
+    <div class="mySlides fade">
+      <div class="numbertext">2 / 3</div>
+      <img src="img/img_snow_wide.jpg" style="width:100%">
+      <div class="text">Caption Two</div>
+    </div>
+
+    <div class="mySlides fade">
+      <div class="numbertext">3 / 3</div>
+      <img src="img/img_mountains_wide.jpg" style="width:100%">
+      <div class="text">Caption Three</div>
+    </div>
+
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+    </div>
+    <br>
+
+    <div style="text-align:center">
+      <span class="dot" onclick="currentSlide(1)"></span>
+      <span class="dot" onclick="currentSlide(2)"></span>
+      <span class="dot" onclick="currentSlide(3)"></span>
+    </div>
+
+  <!-- Knapper til undersider -->
     <a href="template.html">
       <button class="menuknap" type="button"><img src="img/file-text.png" alt="Fil med tekst" width="10%"> Lav skabelon</button>
     </a>
@@ -58,29 +92,29 @@
     <select>
 
       <option value="1">
-        Om Robot Nordic 
+        Om Robot Nordic
       </option>
       <option value="2">
         Fra det øjeblik du træder ind over dørtrinet hos os,
         handler det om dig og din forretning.
       </option>
       <option value="3">
-        Vi i Robot Nordic kan hjælpe din produktionsvirksomhed med at blive mere effektiv. 
+        Vi i Robot Nordic kan hjælpe din produktionsvirksomhed med at blive mere effektiv.
         Kvaliteten og produktionen vil vi effektivisere og Robot Nordic står for hele processen.
-      </option> 
+      </option>
       <option value="4">
-        Vores passion er at drive en virksomhed, hvor den enkelte kunde er i fokus. 
-        Vi ønsker at producere maskiner, som er tilpasset den enkelte kundes behov. 
-        Det bliver muligt for kunden at vælge bestemte komponenter på maskinerne, så kunden får den optimale tilfredsstillelse. 
+        Vores passion er at drive en virksomhed, hvor den enkelte kunde er i fokus.
+        Vi ønsker at producere maskiner, som er tilpasset den enkelte kundes behov.
+        Det bliver muligt for kunden at vælge bestemte komponenter på maskinerne, så kunden får den optimale tilfredsstillelse.
       </option>
       <option value="5">
-        Samtidig er vi også opmærksom på prisen. Med en høj kvalitet og fokus på kunderne vil vi være billigere end vores konkurrenter. 
-        Vi vil nå vores passion med hjælp fra alle vores hårdtarbejdende medarbejdere, som har stor erfaring fra robot- og procesindustrien.    
-      </option> 
+        Samtidig er vi også opmærksom på prisen. Med en høj kvalitet og fokus på kunderne vil vi være billigere end vores konkurrenter.
+        Vi vil nå vores passion med hjælp fra alle vores hårdtarbejdende medarbejdere, som har stor erfaring fra robot- og procesindustrien.
+      </option>
     </select>
   </div>
 
-    
+
   </main>
 
 
