--- a/template.html
+++ b/template.html
@@ -106,7 +106,7 @@
       <input type="text" id="fname" name="fname" value="Fx. Europalle"><br><br>
 
       <div class="dropdown">
-        <button onclick="myFunction(dropdown)" class="dropbtn">Pallefyld</button>
+        <button onclick="myFunction()" class="dropbtn">Pallefyld</button>
           <div id="myDropdown" class="dropdown-content">
             <label for="fname">Fyldnings Højde:</label><br>
             <input type="text" id="fname" name="fname" value="John"><br><br>
