--- a/template.html
+++ b/template.html
@@ -69,8 +69,6 @@
 
     <div class="panel">
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p><br>
-
       <!-- infoknap-->
         <button id="myBtn"></button>
         <div id="myModal" class="modal">
@@ -84,9 +82,8 @@
 
           </div>
 
-
-      <label for="fname">Palle Navn:</label><br>
-      <input type="text" id="fname" name="fname" value="Fx. Shampoo"><br><br>
+        <label for="fname">Palle Navn:</label><br>
+        <input type="text" id="fname" name="fname" value="Fx. Shampoo"><br><br>
 
       <!-- infoknap-->
         <button id="myBtn"></button>
@@ -106,17 +103,21 @@
       <input type="text" id="fname" name="fname" value="Fx. Europalle"><br><br>
 
       <div class="dropdown">
-        <button onclick="myFunction()" class="dropbtn">Pallefyld</button>
+        <button onclick="myFunction()" class="dropbtn">Palle Fyld</button>
           <div id="myDropdown" class="dropdown-content">
             <label for="fname">Fyldnings Højde:</label><br>
-            <input type="text" id="fname" name="fname" value="John"><br><br>
+            <input type="text" id="fname" name="fname" value="mm"><br><br>
             <label for="fname">Fyldnings Procent:</label><br>
-            <input type="text" id="fname" name="fname" value="John"><br><br>
+            <input type="text" id="fname" name="fname" value="%"><br><br>
             <label for="fname">Tilladt Udhæng:</label><br>
-            <input type="text" id="fname" name="fname" value="John"><br><br>
+            <input type="text" id="fname" name="fname" value="mm"><br><br>
           </div>
       </div><br>
 
+
+
+
+<!-- popup content
 <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
 <label for="vehicle1"> I have a bike</label><br>
 <input type="checkbox" id="vehicle2" name="vehicle2" value="Car">
@@ -133,7 +134,7 @@
   <input type="text" id="lname" name="lname" value="Doe"><br><br>
   <input type="submit" value="Submit">
 </form>
-
+-->
 
   </div>
 
