multiple dropdown add function + style

--- a/template.html
+++ b/template.html
@@ -110,10 +110,63 @@
             <label for="fname">Fyldnings Procent:</label><br>
             <input type="text" id="fname" name="fname" value="%"><br><br>
             <label for="fname">Tilladt Udhæng:</label><br>
-            <input type="text" id="fname" name="fname" value="mm"><br><br>
+            <input type="text" id="fname" name="fname" value="mm"><br>
           </div>
-      </div><br>
+      </div>
 
+      <div class="dropdown">
+        <button onclick="myFunction2()" class="dropbtn">Palle Dimensioner</button>
+          <div id="myDropdown2" class="dropdown-content">
+            <label for="fname">Palle Højde:</label><br>
+            <input type="text" id="fname" name="fname" value="mm"><br><br>
+            <label for="fname">Palle Bredde:</label><br>
+            <input type="text" id="fname" name="fname" value="mm"><br><br>
+            <label for="fname">Palle Længde:</label><br>
+            <input type="text" id="fname" name="fname" value="mm"><br>
+          </div>
+      </div>
+
+      <div class="dropdown">
+        <button onclick="myFunction3()" class="dropbtn">Pakke Mønster</button>
+          <div id="myDropdown3" class="dropdown-content">
+
+            <p> Kryds venligt kun 1 felt af <p> <br>
+            <label class="container">Blandet Lag
+              <input type="checkbox" >
+              <span class="checkmark"></span>
+            </label>
+
+            <label class="container">Spred Pakker
+              <input type="checkbox" >
+              <span class="checkmark"></span>
+            </label>
+
+            <label class="container">Kun Fulde Lag
+              <input type="checkbox" >
+              <span class="checkmark"></span>
+            </label>
+
+            <label class="container">Center Load
+              <input type="checkbox" >
+              <span class="checkmark"></span>
+            </label>
+
+            <label class="container">Bind Lag
+              <input type="checkbox" >
+              <span class="checkmark"></span>
+            </label>
+
+            <label class="container">Sæt Pakker Ved Kant
+              <input type="checkbox" >
+              <span class="checkmark"></span>
+            </label>
+
+
+
+
+
+          </div>
+      </div>
 
 
 
