--- a/template.html
+++ b/template.html
@@ -65,8 +65,7 @@
 </div>
 -->
 
-  <button class="accordion">Palle</button>
-
+  <button class="accordion"><img src="img/Palleicon-01.png" style="width:20%; float:left">Palle</button>
     <div class="panel">
 
       <!-- infoknap-->
@@ -160,12 +159,10 @@
               <input type="checkbox" >
               <span class="checkmark"></span>
             </label>
-
-
-
-
+            <hr class="afstanspakkemoenster">
 
           </div>
+
       </div>
 
 
@@ -194,7 +191,7 @@
 
 
 
-<button class="accordion">Produkt</button>
+<button class="accordion"><img src="img/Produkticon-01.png" style="width:20%; float:left">Produkt</button>
 <div class="panel">
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 </div>
