Dropdown til produkt

--- a/template.html
+++ b/template.html
@@ -82,7 +82,7 @@
           </div>
 
         <label for="fname">Palle Navn:</label><br>
-        <input type="text" id="fname" name="fname" value="Fx. Shampoo"><br><br>
+        <input type="text" id="fname" name="fname" value="Fx. Shampoo levering"><br><br>
 
       <!-- infoknap-->
         <button id="myBtn"></button>
@@ -99,7 +99,12 @@
 
 
       <label for="fname">Palle Type:</label><br>
-      <input type="text" id="fname" name="fname" value="Fx. Europalle"><br><br>
+      <select id="formularvalg" name="formularvalg">
+        <option value="Europalle">Europalle</option>
+        <option value="Halvpalle">Halvpalle</option>
+        <option value="Kvartpalle">Kvartpalle</option>
+      </select>
+      <br><br>
 
       <div class="dropdown">
         <button onclick="myFunction()" class="dropbtn">Palle Fyld</button>
@@ -158,8 +163,14 @@
             <label class="container">Sæt Pakker Ved Kant
               <input type="checkbox" >
               <span class="checkmark"></span>
-            </label>
-            <hr class="afstanspakkemoenster">
+            </label><br>
+
+            <hr class="afstanspakkemoenster"><br>
+
+            <label for="fname">Sensor Maks. Positiv Margin:</label><br>
+            <input type="text" id="fname" name="fname" value="mm"><br><br>
+            <label for="fname">Sensor Min. Negativ Margin:</label><br>
+            <input type="text" id="fname" name="fname" value="mm"><br>
 
           </div>
 
@@ -193,8 +204,43 @@
 
 <button class="accordion"><img src="img/Produkticon-01.png" style="width:20%; float:left">Produkt</button>
 <div class="panel">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-</div>
+
+  <label for="fname">Produkt Navn:</label><br>
+  <input type="text" id="fname" name="fname" value="Fx. Shampoo"><br><br>
+
+  <label for="fname">Antal:</label><br>
+  <input type="text" id="fname" name="fname" value="Fx. 20 kolli"><br><br>
+
+  <div class="dropdown">
+    <button onclick="myFunction4()" class="dropbtn">Pakke Dimensioner</button>
+      <div id="myDropdown4" class="dropdown-content">
+
+        <label for="fname">Pakke Længde:</label><br>
+        <input type="text" id="fname" name="fname" value="mm"><br><br>
+        <label for="fname">Pakke Højde:</label><br>
+        <input type="text" id="fname" name="fname" value="mm"><br><br>
+        <label for="fname">Pakke Bredde:</label><br>
+        <input type="text" id="fname" name="fname" value="mm"><br>
+
+      </div>
+
+  </div>
+
+  <div class="dropdown">
+    <button onclick="myFunction5()" class="dropbtn">Pakke Type</button>
+      <div id="myDropdown5" class="dropdown-content">
+
+        <label for="fname">Vælg Formtype</label><br>
+          <select id="formularvalg" name="formularvalg">
+            <option value="Kasse">Kasse</option>
+            <option value="Cylinder">Cylinder</option>
+          </select>
+
+      </div>
+
+  </div>
+
+
 
 
 </body>
