tilføjelse af ekstra produkt knap

--- a/template.html
+++ b/template.html
@@ -230,7 +230,7 @@
     <button onclick="myFunction5()" class="dropbtn">Pakke Type</button>
       <div id="myDropdown5" class="dropdown-content">
 
-        <label for="fname">Vælg Formtype</label><br>
+        <label for="fname">Vælg Pakketype</label><br>
           <select id="formularvalg" name="formularvalg">
             <option value="Kasse">Kasse</option>
             <option value="Cylinder">Cylinder</option>
@@ -239,6 +239,44 @@
       </div>
 
   </div>
+
+  <button class="accordion2">Tilføj Produkt +</button>
+  <div class="panel2">
+
+    <label for="fname">Produkt Navn:</label><br>
+    <input type="text" id="fname" name="fname" value="Fx. Shampoo"><br><br>
+
+    <label for="fname">Antal:</label><br>
+    <input type="text" id="fname" name="fname" value="Fx. 20 kolli"><br><br>
+
+    <div class="dropdown">
+      <button onclick="myFunction6()" class="dropbtn">Pakke Dimensioner</button>
+        <div id="myDropdown6" class="dropdown-content">
+
+          <label for="fname">Pakke Længde:</label><br>
+          <input type="text" id="fname" name="fname" value="mm"><br><br>
+          <label for="fname">Pakke Højde:</label><br>
+          <input type="text" id="fname" name="fname" value="mm"><br><br>
+          <label for="fname">Pakke Bredde:</label><br>
+          <input type="text" id="fname" name="fname" value="mm"><br>
+
+        </div>
+
+    </div>
+
+    <div class="dropdown">
+      <button onclick="myFunction7()" class="dropbtn">Pakke Type</button>
+        <div id="myDropdown7" class="dropdown-content">
+
+          <label for="fname">Vælg Pakketype</label><br>
+            <select id="formularvalg" name="formularvalg">
+              <option value="Kasse">Kasse</option>
+              <option value="Cylinder">Cylinder</option>
+            </select>
+
+        </div>
+        <button class="accordion2">Tilføj Produkt +</button>
+    </div>
 
 
 
