Tilføjelse af knapper (gem load og videre)

--- a/template.html
+++ b/template.html
@@ -47,26 +47,9 @@
   </div>
 
 
-<!-- drop down med palle
-<h2>Clickable Dropdown</h2>
-<p>Click on the button to open the dropdown menu.</p>
-
-<div class="dropdown">
-  <button onclick="myFunction()" class="dropbtn">Palle Info</button>
-  <div id="myDropdown" class="dropdown-content">
-    <form action="/action_page.php"><br>
-      <label for="fname">Palle Navn:</label><br>
-      <input type="text" id="fname" name="fname" value="mm"><span>&#8505;</span><br><br>
-      <label for="fname">Palle type:</label><br>
-      <input type="text" id="fname" name="fname" value="%"><br><br>
-      <input type="submit" value="Godkend" onclick="show_alert();">
-    </form>
-  </div>
-</div>
--->
-
-  <button class="accordion"><img src="img/Palleicon-01.png" style="width:20%; float:left">Palle</button>
-    <div class="panel">
+<!-- Palle accordion -->
+<button class="accordion"><img src="img/Palleicon-01.png" style="width:20%; float:left">Palle</button>
+ <div class="panel">
 
       <!-- infoknap-->
         <button id="myBtn"></button>
@@ -79,7 +62,7 @@
               <img class="infografi" src="img/infoknap.png">
             </div>
 
-          </div>
+        </div>
 
         <label for="fname">Palle Navn:</label><br>
         <input type="text" id="fname" name="fname" value="Fx. Shampoo levering"><br><br>
@@ -95,7 +78,7 @@
               <img class="infografi" src="img/infoknap.png">
             </div>
 
-          </div>
+        </div>
 
 
       <label for="fname">Palle Type:</label><br>
@@ -173,37 +156,14 @@
             <input type="text" id="fname" name="fname" value="mm"><br>
 
           </div>
-
       </div>
-
-
-
-<!-- popup content
-<input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
-<label for="vehicle1"> I have a bike</label><br>
-<input type="checkbox" id="vehicle2" name="vehicle2" value="Car">
-<label for="vehicle2"> I have a car</label><br>
-<input type="checkbox" id="vehicle3" name="vehicle3" value="Boat">
-<label for="vehicle3"> I have a boat</label><br>
-
-
-
- <form action="/action_page.php">
-  <label for="fname">First name:</label><br>
-  <input type="text" id="fname" name="fname" value="John"><br>
-  <label for="lname">Last name:</label><br>
-  <input type="text" id="lname" name="lname" value="Doe"><br><br>
-  <input type="submit" value="Submit">
-</form>
--->
-
-  </div>
+ </div>
 
 
 
 
 <button class="accordion"><img src="img/Produkticon-01.png" style="width:20%; float:left">Produkt</button>
-<div class="panel">
+ <div class="panel">
 
   <label for="fname">Produkt Navn:</label><br>
   <input type="text" id="fname" name="fname" value="Fx. Shampoo"><br><br>
@@ -264,7 +224,7 @@
 
     </div>
 
-    <div class="dropdown">
+     <div class="dropdown">
       <button onclick="myFunction7()" class="dropbtn">Pakke Type</button>
         <div id="myDropdown7" class="dropdown-content">
 
@@ -275,11 +235,16 @@
             </select>
 
         </div>
-        <button class="accordion2">Tilføj Produkt +</button>
+        <button class="accordion3">Tilføj Produkt +</button>
     </div>
+  </div>
+ </div>
 
-
-
-
+    <button class="Nulstil">Nulstil</button>
+    <button class="Gem Palle">Gem Palle</button>
+    <button class="Videre">Videre</button>
+    <p> TEST <p>
 </body>
+
+
 </html>
