Færdig - mangler kun info symbol

--- a/template.html
+++ b/template.html
@@ -51,11 +51,12 @@
 <button class="accordion"><img src="img/Palleicon-01.png" style="width:20%; float:left">Palle</button>
  <div class="panel">
 
-      <!-- infoknap-->
+
+      <!-- infoknap
         <button id="myBtn"></button>
         <div id="myModal" class="modal">
 
-          <!-- popup content -->
+          <!-- popup content
             <div class="infoknap-content">
               <span class="close">&times;</span>
               <p>Navngiv den palle du vil have maskinen til at pakke.</p>
@@ -63,23 +64,22 @@
             </div>
 
         </div>
-
+-->
         <label for="fname">Palle Navn:</label><br>
         <input type="text" id="fname" name="fname" value="Fx. Shampoo levering"><br><br>
 
-      <!-- infoknap-->
+      <!-- infoknap-
         <button id="myBtn"></button>
         <div id="myModal" class="modal">
 
-          <!-- popup content -->
+          <!-- popup content
             <div class="infoknap-content">
               <span class="close">&times;</span>
               <p>Navngiv den palle du vil have maskinen til at pakke.</p>
               <img class="infografi" src="img/infoknap.png">
             </div>
-
         </div>
-
+-->
 
       <label for="fname">Palle Type:</label><br>
       <select id="formularvalg" name="formularvalg">
@@ -117,7 +117,7 @@
         <button onclick="myFunction3()" class="dropbtn">Pakke Mønster</button>
           <div id="myDropdown3" class="dropdown-content">
 
-            <p> Kryds venligt kun 1 felt af <p> <br>
+            <p> Kryds venligst kun 1 felt af <p> <br>
             <label class="container">Blandet Lag
               <input type="checkbox" >
               <span class="checkmark"></span>
@@ -158,6 +158,7 @@
           </div>
       </div>
  </div>
+
 
 
 
@@ -241,9 +242,9 @@
  </div>
 
     <button class="Nulstil">Nulstil</button>
-    <button class="Gem Palle">Gem Palle</button>
-    <button class="Videre">Videre</button>
-    <p> TEST <p>
+    <button class="GemPalle">Gem Palle</button>
+    <button class="Videre" button onclick="window.location.href='panel.html';">Videre</button>
+
 </body>
 
 
