load skabelon knap tilføjet

--- a/forside.html
+++ b/forside.html
@@ -79,12 +79,10 @@
     </div>
 
   <!-- Knapper til undersider -->
-    <a href="template.html">
-      <button class="menuknap" type="button"><img src="img/file-text.png" alt="Fil med tekst" width="10%"> Lav skabelon</button>
-    </a>
-    <a href="panel.html">
-      <button class="menuknap1" type="button"><img src="img/calendar.png" alt="Kalender ikon" width="10%"> Kontrol Panel</button>
-    </a>
+    <button class="menuknap" type="button"><a href="template.html"><img src="img/file-text.png" alt="Fil med tekst" width="10%">Lav Skabelon</a></button>
+    <button class="menuknap2" type="button" name="button"><a href="#"><img src="img/rotate-cw.png" alt="En pil der drejer rundt" width="10%">Load Skabelon</a></button>
+    <button class="menuknap1" type="button"><a href="panel.html"><img src="img/calendar.png" alt="Kalender ikon" width="10%"> Kontrol Panel</a></button>
+
 
 
 <!-- Budskabsteksten -->
