--- a/template.html
+++ b/template.html
@@ -52,11 +52,11 @@
  <div class="panel">
 
 
-      <!-- infoknap
+      <!-- infoknap -->
         <button id="myBtn"></button>
         <div id="myModal" class="modal">
 
-          <!-- popup content
+          <!-- popup content-->
             <div class="infoknap-content">
               <span class="close">&times;</span>
               <p>Navngiv den palle du vil have maskinen til at pakke.</p>
@@ -64,7 +64,6 @@
             </div>
 
         </div>
--->
         <!-- Pallenavn formularvalg -->
         <label for="fname">Palle Navn:</label><br>
         <input type="text" id="fname" name="fname" value="Fx. Shampoo levering"><br><br>
