--- a/template.html
+++ b/template.html
@@ -68,18 +68,17 @@
         <label for="fname">Palle Navn:</label><br>
         <input type="text" id="fname" name="fname" value="Fx. Shampoo levering"><br><br>
 
-      <!-- infoknap-
+      <!-- infoknap -->
         <button id="myBtn"></button>
         <div id="myModal" class="modal">
 
-          <!-- popup content
+          <!-- popup content -->
             <div class="infoknap-content">
               <span class="close">&times;</span>
               <p>Navngiv den palle du vil have maskinen til at pakke.</p>
               <img class="infografi" src="img/infoknap.png">
             </div>
         </div>
--->
 
       <!-- Palletype formularvalg -->
       <label for="fname">Palle Type:</label><br>
