valideret sider: index og panel

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
 <form class="box" action="index.html" method="post">
   <h1> Log ind </h1>
-  <input type="text" name="" placeholder="Brugernavn">
-  <input type="password" name="" placeholder="Kodeord">
+  <input type="text" placeholder="Brugernavn">
+  <input type="password" placeholder="Kodeord">
   <div class="log-ind">
   <a href="forside.html"><img class="log-ind-icon" src="img/user-check.png" alt="User med flueben">
     Log ind</a></div>
