--- a/forside.html
+++ b/forside.html
@@ -50,13 +50,13 @@
 
     <div class="mySlides fade">
       <div class="numbertext">1 / 3</div>
-      <img src="img/engelsk.png" style="width:100%">
+      <img src="img/engelsk.png" alt="UK flag" style="width:100%">
       <div class="text">Step 1</div>
     </div>
 
     <div class="mySlides fade">
       <div class="numbertext">2 / 3</div>
-      <img src="img/img_snow_wide.jpg" style="width:100%">
+      <img src="img/img_snow_wide.jpg" alt="Denneborg flag" style="width:100%">
       <div class="text">Step 2</div>
     </div>
 
@@ -79,9 +79,9 @@
     </div>
 
   <!-- Knapper til undersider -->
-    <button class="menuknap" type="button"><a href="template.html"><img src="img/file-text.png" alt="Fil med tekst" width="10%">Lav Skabelon</a></button>
-    <button class="menuknap2" type="button" name="button"><a href="#"><img src="img/rotate-cw.png" alt="En pil der drejer rundt" width="10%">Load Skabelon</a></button>
-    <button class="menuknap1" type="button"><a href="panel.html"><img src="img/calendar.png" alt="Kalender ikon" width="10%"> Kontrol Panel</a></button>
+    <div class="menuknap"><a href="template.html"><img src="img/file-text.png" alt="Fil med tekst">Lav Skabelon</a></div>
+    <div class="menuknap2"><a href="#"><img src="img/rotate-cw.png" alt="En pil der drejer rundt">Load Skabelon</a></div>
+    <div class="menuknap1"><a href="panel.html"><img src="img/calendar.png" alt="Kalender ikon"> Kontrol Panel</a></div>
 
 
 
