infoknapper på alle dropdown

--- a/template.html
+++ b/template.html
@@ -50,6 +50,7 @@
 <!-- Palle accordion -->
 <button class="accordion"><img src="img/Palleicon-01.png" style="width:20%; float:left">Palle</button>
  <div class="panel">
+   <div class="palleinfo">
 
 
       <!-- infoknap -->
@@ -79,7 +80,7 @@
               <img class="infografi" src="img/infoknap.png">
             </div>
         </div>
-
+    </div>
       <!-- Palletype formularvalg -->
       <label for="fname">Palle Type:</label><br>
       <select id="formularvalg" name="formularvalg">
@@ -93,10 +94,49 @@
       <div class="dropdown">
         <button onclick="myFunction()" class="dropbtn">Palle Fyld</button>
           <div id="myDropdown" class="dropdown-content">
+
+            <!-- infoknap -->
+              <button id="myBtn"></button>
+              <div id="myModal" class="modal">
+
+                <!-- popup content -->
+                  <div class="infoknap-content">
+                    <span class="close">&times;</span>
+                    <p>Navngiv den palle du vil have maskinen til at pakke.</p>
+                    <img class="infografi" src="img/infoknap.png">
+                  </div>
+              </div>
+
             <label for="fname">Fyldnings Højde:</label><br>
             <input type="text" id="fname" name="fname" value="mm"><br><br>
+
+            <!-- infoknap -->
+              <button id="myBtn"></button>
+              <div id="myModal" class="modal">
+
+                <!-- popup content -->
+                  <div class="infoknap-content">
+                    <span class="close">&times;</span>
+                    <p>Navngiv den palle du vil have maskinen til at pakke.</p>
+                    <img class="infografi" src="img/infoknap.png">
+                  </div>
+              </div>
+
             <label for="fname">Fyldnings Procent:</label><br>
             <input type="text" id="fname" name="fname" value="%"><br><br>
+
+            <!-- infoknap -->
+              <button id="myBtn"></button>
+              <div id="myModal" class="modal">
+
+                <!-- popup content -->
+                  <div class="infoknap-content">
+                    <span class="close">&times;</span>
+                    <p>Navngiv den palle du vil have maskinen til at pakke.</p>
+                    <img class="infografi" src="img/infoknap.png">
+                  </div>
+              </div>
+
             <label for="fname">Tilladt Udhæng:</label><br>
             <input type="text" id="fname" name="fname" value="mm"><br>
           </div>
@@ -106,10 +146,49 @@
       <div class="dropdown">
         <button onclick="myFunction2()" class="dropbtn">Palle Dimensioner</button>
           <div id="myDropdown2" class="dropdown-content">
+
+            <!-- infoknap -->
+              <button id="myBtn"></button>
+              <div id="myModal" class="modal">
+
+                <!-- popup content -->
+                  <div class="infoknap-content">
+                    <span class="close">&times;</span>
+                    <p>Navngiv den palle du vil have maskinen til at pakke.</p>
+                    <img class="infografi" src="img/infoknap.png">
+                  </div>
+              </div>
+
             <label for="fname">Palle Højde:</label><br>
             <input type="text" id="fname" name="fname" value="mm"><br><br>
+
+            <!-- infoknap -->
+              <button id="myBtn"></button>
+              <div id="myModal" class="modal">
+
+                <!-- popup content -->
+                  <div class="infoknap-content">
+                    <span class="close">&times;</span>
+                    <p>Navngiv den palle du vil have maskinen til at pakke.</p>
+                    <img class="infografi" src="img/infoknap.png">
+                  </div>
+              </div>
+
             <label for="fname">Palle Bredde:</label><br>
             <input type="text" id="fname" name="fname" value="mm"><br><br>
+
+            <!-- infoknap -->
+              <button id="myBtn"></button>
+              <div id="myModal" class="modal">
+
+                <!-- popup content -->
+                  <div class="infoknap-content">
+                    <span class="close">&times;</span>
+                    <p>Navngiv den palle du vil have maskinen til at pakke.</p>
+                    <img class="infografi" src="img/infoknap.png">
+                  </div>
+              </div>
+
             <label for="fname">Palle Længde:</label><br>
             <input type="text" id="fname" name="fname" value="mm"><br>
           </div>
@@ -119,38 +198,112 @@
       <div class="dropdown">
         <button onclick="myFunction3()" class="dropbtn">Pakke Mønster</button>
           <div id="myDropdown3" class="dropdown-content">
+            <div class="palledimensionerinfoknap"
             <p> Kryds venligst kun 1 felt af <p> <br>
             <!-- afkrydsningsfelter -->
+
+            <!-- infoknap -->
+              <button id="myBtn"></button>
+              <div id="myModal" class="modal">
+
+                <!-- popup content -->
+                  <div class="infoknap-content">
+                    <span class="close">&times;</span>
+                    <p>Navngiv den palle du vil have maskinen til at pakke.</p>
+                    <img class="infografi" src="img/infoknap.png">
+                  </div>
+              </div>
+
             <label class="container">Blandet Lag
               <input type="checkbox" >
               <span class="checkmark"></span>
             </label>
+
+            <!-- infoknap -->
+              <button id="myBtn"></button>
+              <div id="myModal" class="modal">
+
+                <!-- popup content -->
+                  <div class="infoknap-content">
+                    <span class="close">&times;</span>
+                    <p>Navngiv den palle du vil have maskinen til at pakke.</p>
+                    <img class="infografi" src="img/infoknap.png">
+                  </div>
+              </div>
 
             <label class="container">Spred Pakker
               <input type="checkbox" >
               <span class="checkmark"></span>
             </label>
 
+            <!-- infoknap -->
+              <button id="myBtn"></button>
+              <div id="myModal" class="modal">
+
+                <!-- popup content -->
+                  <div class="infoknap-content">
+                    <span class="close">&times;</span>
+                    <p>Navngiv den palle du vil have maskinen til at pakke.</p>
+                    <img class="infografi" src="img/infoknap.png">
+                  </div>
+              </div>
+
             <label class="container">Kun Fulde Lag
               <input type="checkbox" >
               <span class="checkmark"></span>
             </label>
+
+            <!-- infoknap -->
+              <button id="myBtn"></button>
+              <div id="myModal" class="modal">
+
+                <!-- popup content -->
+                  <div class="infoknap-content">
+                    <span class="close">&times;</span>
+                    <p>Navngiv den palle du vil have maskinen til at pakke.</p>
+                    <img class="infografi" src="img/infoknap.png">
+                  </div>
+              </div>
 
             <label class="container">Center Load
               <input type="checkbox" >
               <span class="checkmark"></span>
             </label>
 
+            <!-- infoknap -->
+              <button id="myBtn"></button>
+              <div id="myModal" class="modal">
+
+                <!-- popup content -->
+                  <div class="infoknap-content">
+                    <span class="close">&times;</span>
+                    <p>Navngiv den palle du vil have maskinen til at pakke.</p>
+                    <img class="infografi" src="img/infoknap.png">
+                  </div>
+              </div>
+
             <label class="container">Bind Lag
               <input type="checkbox" >
               <span class="checkmark"></span>
             </label>
 
+            <!-- infoknap -->
+              <button id="myBtn"></button>
+              <div id="myModal" class="modal">
+
+                <!-- popup content -->
+                  <div class="infoknap-content">
+                    <span class="close">&times;</span>
+                    <p>Navngiv den palle du vil have maskinen til at pakke.</p>
+                    <img class="infografi" src="img/infoknap.png">
+                  </div>
+              </div>
+
             <label class="container">Sæt Pakker Ved Kant
               <input type="checkbox" >
               <span class="checkmark"></span>
             </label><br>
-
+          </div>
             <hr class="afstanspakkemoenster"><br>
 
             <label for="fname">Sensor Maks. Positiv Margin:</label><br>
