--- a/template.html
+++ b/template.html
@@ -306,8 +306,33 @@
           </div>
             <hr class="afstanspakkemoenster"><br>
 
+            <!-- infoknap -->
+              <button id="myBtn"></button>
+              <div id="myModal" class="modal">
+
+                <!-- popup content -->
+                  <div class="infoknap-content">
+                    <span class="close">&times;</span>
+                    <p>Navngiv den palle du vil have maskinen til at pakke.</p>
+                    <img class="infografi" src="img/infoknap.png">
+                  </div>
+              </div>
+
             <label for="fname">Sensor Maks. Positiv Margin:</label><br>
             <input type="text" id="fname" name="fname" value="mm"><br><br>
+
+            <!-- infoknap -->
+              <button id="myBtn"></button>
+              <div id="myModal" class="modal">
+
+                <!-- popup content -->
+                  <div class="infoknap-content">
+                    <span class="close">&times;</span>
+                    <p>Navngiv den palle du vil have maskinen til at pakke.</p>
+                    <img class="infografi" src="img/infoknap.png">
+                  </div>
+              </div>
+              
             <label for="fname">Sensor Min. Negativ Margin:</label><br>
             <input type="text" id="fname" name="fname" value="mm"><br>
 
